presentation-site/css/styles.css
/* ... */
.navbar-nav .nav-item .nav-link {
  color: #333347;
  font-weight: 500;
  display: flex;
  vertical-align: middle;
}

.navbar-nav .nav-item .nav-link:hover {
  color: #333347;
  -webkit-transition: 0.5s;
  transition: 0.5s;
}

.navbar-nav .nav-item .nav-link:focus {
  color: #333347;
}

.btn-nav {
  display: inline-block;
  height: 38px;
  padding: 0 30px;
  text-align: center;
  font-size: 12px;
  font-weight: 600;
  line-height: 36px;
  letter-spacing: 1px;
  margin: 25px 0;
  text-transform: uppercase;
  text-decoration: none !important;
  white-space: nowrap;
  cursor: pointer;
  background-color: transparent;
  background: #7ac944;
  color: #ffffff;
  border: 1px solid #7ac944 !important;
  border-radius: 50px;
  box-sizing: border-box;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  transition: 0.2s;
}

.btn-nav:hover {
  color: #ffffff;
  background: #7ac944;
}

.btn-nav:focus,
.btn-nav:active {
  background: #7ac944;
  color: #ffffff;
}

/*---- Navbar Alt -----*/

.navbar-alt {
  background: transparent !important;
}

.navbar-alt .navbar-nav {
  background: transparent !important;
}
/*
.navbar-alt .btn-nav {
	background: #563d7c !important;
	border-color: #563d7c !important;
}*/

.navbar-alt .nav-item .nav-link {
  color: #ffffff;
}

.navbar-alt .nav-item .nav-link:hover,
.navbar-alt .nav-item .nav-link:focus {
  color: rgba(255, 255, 255, 0.7);
}

.navbar-alt .navbar-brand {
  color: #ffffff !important;
}

.only-mobile {
  display: none !important;
}

.only-desktop {
  display: flex;
}

@media only screen and (max-width: 767px) {
  .only-mobile {
    display: block !important;
  }

  .only-desktop {
    display: none !important;
  }

  .navbar {
    padding: 15px;
  }

  .navbar .navbar-nav {
    background: #ffffff !important;
    padding-bottom: 25px;
  }

  .navbar-nav .nav-item {
    display: block;
  }

  .nav-white .nav-item .nav-link {
    color: #4957b8;
  }

  .navbar-alt .nav-item .nav-link {
    color: #333347;
  }

  .navbar .btn-cta {
    padding: 0 30px;
  }

  .home-3 {
    padding-bottom: 0 !important;
    padding-top: 90px !important;
    min-height: 0px !important;
  }

  .big-logo {
    width: 40px !important;
  }

  h2 {
    font-size: 32px !important;
  }

  h2 ~ p {
    font-size: 16px !important;
  }

  h3 {
    font-size: 18px !important;
  }

  #screenshots {
    padding-top: 50px !important;
    transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1);
  }

  .screenshot {
    height: 300px !important;
  }

  .tag {
    font-size: 18px !important;
  }

  .screenshot.active .tag {
    transform: translateX(-150px) !important;
    opacity: 1;
  }

  .f-text {
    padding: 0 !important;
    margin-top: 19px !important;
  }

  .f-text p {
    text-align: center !important;
  }

  .how-does-it-work .img-wrapper {
    width: calc(100vw - 80px) !important;
  }

  .how-does-it-work {
    margin-bottom: 16px !important;
    margin-top: 64px !important;
  }
}

@media only screen and (min-width: 240px) {
  .navbar.past-main {
    background: #ffffff !important;
    border-bottom: 1px solid #efeff1;
  }

  .navbar.effect-main {
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
  }

  .navbar.past-main .navbar-brand {
    color: #333347 !important;
  }

  .nav-white.past-main .nav-item .nav-link {
    color: #333347;
    font-weight: 500;
  }

  .navbar.past-main .nav-item .nav-link {
    color: #333347;
    font-weight: 500;
  }

  .navbar.past-main .nav-item:hover .nav-link {
    color: #23d3d3;
  }

  .navbar.past-main .navbar-brand {
    color: #333347;
  }
  /*
.navbar.past-main span.navbar-toggler-icon {
	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.6)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}*/

  .nav-white.effect-main {
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
  }
}

/*----------------- Hero Section Styling ------------------*/

.main {
  width: 100%;
  height: 100%;
}

.home {
  padding: 75px 0 75px 0;
  background: #f7f7f8;
}

.home .hero-content {
  padding: 25px 0 0 0;
}

.centered {
  float: none !important;
  margin-left: auto !important;
  margin-right: auto !important;
}

.home h1 {
  font-size: 42px;
  font-weight: 300;
  color: #ffffff;
  color: #252525;
  line-height: 1.2;
  letter-spacing: -0.01em;
}

.home p {
  font-size: 18px;
  font-weight: 400;
  color: rgb(129, 129, 152);
  max-width: 630px;
  margin: 0 auto;
  letter-spacing: 0;
  line-height: 1.6;
  margin-top: 10px;
  margin-bottom: 15px;
}

.btn-action {
  font-family: 'Montserrat';
  display: inline-block;
  height: 42px;
  padding: 0 30px;
  text-align: center;
  font-size: 12px;
  font-weight: 600;
  line-height: 40px;
  letter-spacing: 1px;
  margin: 25px 0;
  text-transform: uppercase;
  text-decoration: none !important;
  white-space: nowrap;
  cursor: pointer;
  background-color: transparent;
  background: #7ac944;
  color: #ffffff;
  border: 1px solid #7ac944 !important;
  border-radius: 50px;
  box-sizing: border-box;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  transition: 0.2s;
}

.btn-action:hover {
  color: #ffffff;
  background: #7ac944;
  border: 1px solid #7ac944 !important;
  outline: none !important;
  text-decoration: none;
}

.btn-action:focus,
.btn-action:active {
  background: #7ac944;
  color: #ffffff;
  border: 1px solid transparent !important;
  outline: none !important;
}

.btn-alt {
  background: #7ac944;
  color: #ffffff;
}

.btn-alt:hover {
  background: #7ac944;
  color: #ffffff;
  border: 1px solid #6d48e5 !important;
  outline: none !important;
  text-decoration: none;
}

.btn-white {
  background: #ffffff;
  color: #7ac944;
}

.btn-white:hover {
  background: #ffffff;
  color: #7ac944;
  border: 1px solid #ffffff !important;
  outline: none !important;
  text-decoration: none;
}

.home .client-list {
  margin-top: 25px;
}
/* ... */

